--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -42,11 +42,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="{% static 'CSS/styles465.css'%}">
-  <link rel="stylesheet" href="{% static 'CSS/related22.css'%}">
-  <link rel="stylesheet" href="{% static 'CSS/postpag390.css'%}">
-  <link rel="stylesheet" href="{% static 'CSS/styleterms11.css'%}">
-  <link rel="stylesheet" href="{% static 'CSS/staticlogin22.css'%}">
+  <link rel="stylesheet" href="{% static 'CSS/styles465.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/related22.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/postpag12.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/styleterms11.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/staticlogin22.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/profile12.css'%}?v={{ STATIC_VERSION }}">
 
   <!-- 
     - preload images
