--- a/App/templates/register.html
+++ b/App/templates/register.html
@@ -100,7 +100,7 @@
             </div>
         
         </body>
-        <script src="{% static 'JavaScript/Register39.js'%}?v={{ timestamp }}"></script>
+        <script src="{% static 'JavaScript/Register39.js'%}?v={{ STATIC_VERSION }}"></script>
         
     </div>
 </div>
