--- a/App/templates/profile.html
+++ b/App/templates/profile.html
@@ -28,6 +28,7 @@
                 <span class="close">&times;</span>
                 <h2 class="prof-edit-h2">Edit Profile</h2>
                 <form id="editProfileForm" class="prof-form" method="POST">
+                    {% csrf_token %}
                     <label class="prof-label" for="name">Name:</label>
                     <input class="profile-input" type="text" id="name" name="username" value="{{username}}" required>
                     <label class="prof-label" for="email">Email:</label>
