--- a/App/static/CSS/profile44.css
+++ b/App/static/CSS/profile44.css
@@ -211,6 +211,7 @@ padding: 20px;
 border-radius: 10px;
 width: 90%;
 max-width: 400px;
+border: 1px solid white;
 /* box-shadow: var(--shadow); */
 }
 
