Profile features update

--- a/App/static/CSS/postpag12.css
+++ b/App/static/CSS/postpag12.css
@@ -567,7 +567,7 @@ button {
     font-size: 25px;
     font-weight: bold;
     height: 5px;
-    color: #ced7de;
+    color: #ffffff;
     display: flex;
     align-items: center;
     justify-content: center;
