--- a/App/templates/profile.html
+++ b/App/templates/profile.html
@@ -36,7 +36,10 @@
                     <p class="blog-register-alert">
                         
                     </p>
-                    <button type="submit" class="prof-btn-save">Save Changes</button>
+                    <button class="prof-btn-save" type="submit">
+                        Save Changes
+                        <div class="roll"><span>.</span><span>.</span><span>.</span></div>
+                    </button>
                 </form>
             </div>
         </div>
