--- a/App/static/CSS/profile23.css
+++ b/App/static/CSS/profile23.css
@@ -242,18 +242,62 @@ color: white;
 }
 
 .prof-btn-save {
-/* background: linear-gradient(135deg, #2c3e50, #3498db); */
-background: #2980b9;
-color: #fff;
-border: none;
-padding: 10px 20px;
-border-radius: 5px;
-cursor: pointer;
-font-size: 1.2rem;
+    background: #2980b9;
+    color: #ffffff;
+    padding: 0.8rem;
+    border: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: 0.3s;
+    margin-top: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-
 .prof-btn-save:hover {
     background: linear-gradient(135deg, #1a3045, #3498db);
+}
+
+.prof-btn-save.disabled{
+    opacity: 0.4;
+    border: 1px solid rgb(216, 205, 205);
+}
+
+.roll {
+    font-size: 25px;
+    font-weight: bold;
+    height: 2px;
+    color: #ffffff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+.roll span {
+    height: fit-content;
+    /* background-color: red; */
+    border-radius: 30px;
+    margin-bottom:8px;
+    animation: blink 1.5s infinite;
+}
+
+.roll span:nth-child(1) {
+    margin-left: 1px;
+    animation-delay: 0s;
+}
+.roll span:nth-child(2) {
+    animation-delay: 0.3s;
+}
+.roll span:nth-child(3) {
+    animation-delay: 0.6s;
+}
+
+@keyframes blink {
+0% { opacity: 1; }
+50% { opacity: 0.3; }
+100% { opacity: 1; }
 }
 
 .close {
