--- a/App/static/CSS/profile34.css
+++ b/App/static/CSS/profile34.css
@@ -122,11 +122,12 @@ font-size: 1.3rem;
 }
 
 .tab-btn.active {
-    background: #2980b9;
+    background-image:linear-gradient(90deg, #0ea5ea, #0bd1d1a4 51%, #0ea5ea);
 }
 
 .tab-btn:hover {
-    background: linear-gradient(135deg, #314a63, #3498db);
+    background: linear-gradient(135deg, #4372a0, #3498db);
+    transition: 0.55s ease;
 }
 
 .content-section {
