--- a/App/templates/categories.html
+++ b/App/templates/categories.html
@@ -23,7 +23,7 @@
         <div class="container">
 
             <h2 class="headline headline-2 section-title" id="tag-label">
-                <span class="span">Categories</span>
+                <span class="span categ_custom">Categories</span>
             </h2>
 
             <p class="section-text">
