--- a/App/templates/layout.html
+++ b/App/templates/layout.html
@@ -42,13 +42,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="{% static 'CSS/styles111.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/related22.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/postpag12.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/styles88.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/related87.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/postpag63.css'%}?v={{ STATIC_VERSION }}">
   <link rel="stylesheet" href="{% static 'CSS/styleterms11.css'%}?v={{ STATIC_VERSION }}">
   <link rel="stylesheet" href="{% static 'CSS/staticlogin22.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/profile34.css'%}?v={{ STATIC_VERSION }}">
-  <link rel="stylesheet" href="{% static 'CSS/about98.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/profile45.css'%}?v={{ STATIC_VERSION }}">
+  <link rel="stylesheet" href="{% static 'CSS/about31.css'%}?v={{ STATIC_VERSION }}">
 
   <!-- 
     - preload images
@@ -798,7 +798,7 @@
               You are already signed up for our newsletter.
             </p>
             {% else %}
-            <p class="footer-text">
+            <p class="footer-text m1">
               Sign up to be first to receive the latest stories inspiring us, case studies, and industry news.
             </p>
             {% endif %}
