--- a/App/static/CSS/about31.css
+++ b/App/static/CSS/about31.css
@@ -64,7 +64,7 @@ color: #f7eeee;
 .about-section__text {
 font-size: 1.4rem;
 margin-bottom: 20px;
-color: #89a2ce; 
+color: rgb(185, 199, 219);
 }
 
 .about-section__list {
@@ -74,7 +74,7 @@ margin-bottom: 20px;
 .about-section__list-item {
 margin-bottom: 10px;
 font-size: 1.4rem;
-color: #89a2ce; 
+color: rgb(185, 199, 219);
 
 }
 .about-section__list-item strong {
